wp-ig-components/scss/components/dropdowns/menus/dropdowns-menu-animated.scss
// dma - dropdown-menu-animated
.dma__container {
  display: flex;
  justify-content: center;
}
.dma__list-item {
  position: relative;

  &:hover {
    & .dma__hiddent-content {
      position: absolute;
      top: 100%;
      left: 0;
      min-width: 100%;
      perspective: 1000px;
      &--animated {
        display: block;
      }
    }
    & .dma__hiddent-content-item {
      display: block;
    }
  }

  // &:last-child {
  //   & .dma__hiddent-content {
  //     right: 0;
  //     left: auto;
  //   }
  //   &:hover {
  //     right: 0;
  //     left: auto;
  //   }
  // }
}
.dma__label {
  padding: var(--dma-label-padding, 20px 40px);
  border: none;
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--dma-label-text-color, #fff);
  background: var(--dma-label-bg-color, #34495e);
  position: relative;
  font-size: var(--dma-label-font-size, 18px);
  perspective: 1000px;
  z-index: 100;

  &:hover,
  &:focus {
    background: var(--dma-label-hover-bg-color, #2980b9);
    cursor: pointer;
  }
}

.dma__hiddent-content {
  & li {
    display: none;
    color: var(--dma-hidden-content-item-text-color, #fff);
    background-color: var(--dma-hidden-content-item-bg-color, #34495e);
    font-size: var(--dma-hidden-content-item-font-size, 16px);
    opacity: 0;
    white-space: nowrap;

    & a {
      padding: var(--dma-hidden-content-item-padding, 10px 20px);
      display: block;
      &:hover,
      &:focus {
        background-color: var(--dma-hidden-content-item-hover-bg-color, #2980b9);
      }
    }
  }

  &--animated {
    display: none;
    & li {
      display: block;
      opacity: 1;
    }
  }
}

.dma--hover-off {
  & .dma__list-item {
    &:hover {
      & .dma__hiddent-content--animated {
        display: none;
      }

      & .dma__hiddent-content-item {
        display: none;
      }
    }
  }
}

.dma-item-active {
  & .dma__label {
    background: var(--dma-label-hover-bg-color, #2980b9);
    cursor: pointer;
  }

  & .dma__hiddent-content {
    position: absolute;
    top: 100%;

    min-width: 100%;
    perspective: 1000px;
    &--animated {
      display: block !important;
    }
  }
  & .dma__hiddent-content-item {
    display: block !important;
  }
}

.dma--shaped-dropdown {
  & .dma__hiddent-content {
    padding-top: 10px;
    &:after {
      transition: all 0.3s;
      position: absolute;
      left: 50%;
      transform: translateX(-50%);
      top: 0;
      width: 0;
      height: 0;
      content: "";
      opacity: 0;
      border-left: 10px solid transparent;
      border-right: 10px solid transparent;
      border-bottom: 10px solid var(--dma-hidden-content-item-bg-color, #34495e);
    }
  }

  & .dma__list-item:hover {
    & .dma__hiddent-content:after {
      opacity: 1;
    }
  }
}

.dma--centered-dropdown {
  & .dma__list-item:hover .dma__hiddent-content {
    left: 50%;
    transform: translateX(-50%);
  }
}

.dma-animation__scale-down {
  animation: growDown 300ms ease-in-out forwards;
  transform-origin: top center;
}
.dma-animation__rotate-x {
  animation: rotateMenu 400ms ease-in-out forwards;
  transform-origin: top center;
}
.dma-animation__translate-z {
  animation: downOut 300ms ease-in-out forwards;
  transform-origin: center center;
}
.dma-animation__scale-up {
  animation: growOut 300ms ease-in-out forwards;
  transform-origin: top center;
}
.dma-animation__rotate-y {
  animation: rotateY 300ms ease-in-out forwards;
  transform-origin: top center;
}

@keyframes growDown {
  0% {
    transform: scaleY(0);
  }
  80% {
    transform: scaleY(1.1);
  }
  100% {
    transform: scaleY(1);
  }
}

@keyframes rotateMenu {
  0% {
    transform: rotateX(-90deg);
  }
  70% {
    transform: rotateX(20deg);
  }
  100% {
    transform: rotateX(0deg);
  }
}

@keyframes downOut {
  0% {
    transform: translateZ(200px) transLateY(40px);
  }
  80% {
    transform: translateZ(-10px) transLateY(0px);
  }
  100% {
    transform: translateZ(0px) transLateY(0px);
  }
}

@keyframes growOut {
  0% {
    transform: scale(0);
  }
  80% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}

@keyframes rotateY {
  0% {
    transform: rotateY(90deg);
  }
  80% {
    transform: rotateY(-10deg);
  }
  100% {
    transform: rotateY(0);
  }
}

@keyframes dma__slideDown {
  0% {
    opacity: 0;
    transform: translateY(-60px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes dma__rotateX {
  0% {
    opacity: 0;
    transform: rotateX(-90deg);
  }
  50% {
    transform: rotateX(-20deg);
  }
  100% {
    opacity: 1;
    transform: rotateX(0deg);
  }
}

@keyframes dma__rotateZ {
  0% {
    opacity: 0;
    transform: translateZ(290px);
  }
  80% {
    transform: translateZ(10px);
  }
  100% {
    opacity: 1;
    transform: translateZ(0);
  }
}

@keyframes dma__scaleZ {
  0% {
    opacity: 0;
    transform: scale(0);
  }
  80% {
    transform: scale(1.07);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes dma__translateX {
  0% {
    opacity: 0;
    transform: translateX(60px);
  }
  80% {
    transform: translateX(-5px);
  }
  100% {
    opacity: 1;
    transform: translateX(0px);
  }
}

